        - tab 1:
            - added statusbar msgs for controls on tab 1
        - tab 2:
            - added statusbar msgs for controls on tab 2
        - tab 3:
            - renamed controlname of "checkbox_checkage"
                - using "LOG_PATH" for "exception.txt"
            - changed message dialog on "checkbox_alibicheck"
            - added "checkbox_checkspaces"
        - tab 4:
            - add "Cancel" button to add rule message dialog
            - disable "OK" button till rulename was entered
            - prevents a rule without a name
            - changes in del_rule() function
                - small fix
                - and from now on: the last rule can not be deleted (with info dialog)
        - tab 5:
            - add "Cancel" button to add categories message dialog
            - disable "OK" button till categoryname was entered
            - prevents a category without a name
            - changes in import_categories_tbl() function
            - changes in add_category() function

    - update: "core/log.lua"  / by pulsar
        - added check_filesize() function to clear logfile if it reaches the max allowable size (2MB)  / requested by Devious

    - update: "Announcer.wx.lua"  / by jrock
        - tab 3:
            - changed "textctrl_category" input field into a "choicectrl_category" selection
            - changed "choicectrl_category" to sort categories by name
            - fixed "textctrl_command" and "textctrl_alibinick" to avoid whitespaces in fields after restart
            - added "textctrl_checkage" to enable/disable "spinctrl_maxage"
            - removed "choicectrl_maxage" to select max-age of release to be announced
            - added "spinctrl_maxage" to input max-age in days of release to be announced
            - fixed "del_folder()" function on whitelist/blacklist window if no TAG was selected
            - changed "checkbox_alibicheck" to avoid wxMessageDialog to show up every time
        - tab 4: